--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="container-fluid p-5 bg-primary text-white text-center">
-      <h1>Text Changed</h1>
+      <h1>Change in conflict branch</h1>
       <p>Resize this responsive page to see the effect!</p>
     </div>
 
